- updated Scala doc

--- a/scroll/internal/package.html
+++ b/scroll/internal/package.html
@@ -163,12 +163,8 @@ via the <a href="ecore/ECoreImporter.html" class="extype" name="scroll.internal.
       <p class="shortcomment cmt">This package contains the Scala reference implementation of the role-based modeling language for Compartment Role Object Models (CROM)
 and Compartment Role Object Instances (CROI), as well as Constraint Models.</p><div class="fullcomment"><div class="comment cmt"><p>This package contains the Scala reference implementation of the role-based modeling language for Compartment Role Object Models (CROM)
 and Compartment Role Object Instances (CROI), as well as Constraint Models. The implementation is kept simple, comprehensive, and more
-importantly close to their formalization. This is an adaption of <a href="https://github.com/Eden-06/formalCROM" target="_blank">https://github.com/Eden-06/formalCROM</a>.</p><p>The reference implementation contains the following classes:
-$ - <a href="formal/CROM.html" class="extype" name="scroll.internal.formal.CROM">scroll.internal.formal.CROM</a> representing a Compartment Role Object Model
-$ - <a href="formal/CROI.html" class="extype" name="scroll.internal.formal.CROI">scroll.internal.formal.CROI</a> a Compartment Role Object Instance
-$ - <a href="formal/FormalRoleGroup.html" class="extype" name="scroll.internal.formal.FormalRoleGroup">scroll.internal.formal.FormalRoleGroup</a> the notion of a Role Group
-$ - <a href="formal/FormalConstraintModel.html" class="extype" name="scroll.internal.formal.FormalConstraintModel">scroll.internal.formal.FormalConstraintModel</a> a Constraint Model
-</p></div></div>
+importantly close to their formalization. This is an adaption of <a href="https://github.com/Eden-06/formalCROM" target="_blank">https://github.com/Eden-06/formalCROM</a>.</p><p>The reference implementation contains the following classes:</p><ul><li><a href="formal/CROM.html" class="extype" name="scroll.internal.formal.CROM">scroll.internal.formal.CROM</a> representing a Compartment Role Object Model</li><li><a href="formal/CROI.html" class="extype" name="scroll.internal.formal.CROI">scroll.internal.formal.CROI</a> a Compartment Role Object Instance</li><li><a href="formal/FormalRoleGroup.html" class="extype" name="scroll.internal.formal.FormalRoleGroup">scroll.internal.formal.FormalRoleGroup</a> the notion of a Role Group</li><li><a href="formal/FormalConstraintModel.html" class="extype" name="scroll.internal.formal.FormalConstraintModel">scroll.internal.formal.FormalConstraintModel</a> a Constraint Model
+</li></ul></div></div>
     </li><li name="scroll.internal.graph" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
       <a id="graph"></a>
       <a id="graph:graph"></a>
