--- a/scroll/internal/Compartment$Player.html
+++ b/scroll/internal/Compartment$Player.html
@@ -50,7 +50,7 @@
       </h4>
       
           <div id="comment" class="fullcommenttop"><div class="comment cmt"><p>Implicit wrapper class to add basic functionality to roles and its players as unified types.
-</p></div><dl class="paramcmts block"><dt class="tparam">T</dt><dd class="cmt"><p>type of wrapped</p></dd></dl><div class="toggleContainer block">
+</p></div><dl class="paramcmts block"><dt class="tparam">T</dt><dd class="cmt"><p>type of wrapped object</p></dd></dl><div class="toggleContainer block">
           <span class="toggle">Linear Supertypes</span>
           <div class="superTypes hiddenContent"><a href="Compartment$DispatchType.html" class="extype" name="scroll.internal.Compartment.DispatchType">DispatchType</a>, <a href="Compartment$DynamicType.html" class="extype" name="scroll.internal.Compartment.DynamicType">DynamicType</a>, <span class="extype" name="scala.Dynamic">Dynamic</span>, <span class="extype" name="scala.AnyRef">AnyRef</span>, <span class="extype" name="scala.Any">Any</span></div>
         </div></div>
