--- a/scroll/internal/support/QueryStrategies$RoleQueryStrategy.html
+++ b/scroll/internal/support/QueryStrategies$RoleQueryStrategy.html
@@ -54,7 +54,7 @@
           <div class="superTypes hiddenContent"><span class="extype" name="scala.AnyRef">AnyRef</span>, <span class="extype" name="scala.Any">Any</span></div>
         </div><div class="toggleContainer block">
             <span class="toggle">Known Subclasses</span>
-            <div class="subClasses hiddenContent"><a href="QueryStrategies$$times.html" class="extype" name="scroll.internal.support.QueryStrategies.*">*</a>, <a href="QueryStrategies$WithProperty.html" class="extype" name="scroll.internal.support.QueryStrategies.WithProperty">WithProperty</a>, <a href="QueryStrategies$WithResult.html" class="extype" name="scroll.internal.support.QueryStrategies.WithResult">WithResult</a></div>
+            <div class="subClasses hiddenContent"><a href="QueryStrategies$MatchAny.html" class="extype" name="scroll.internal.support.QueryStrategies.MatchAny">MatchAny</a>, <a href="QueryStrategies$WithProperty.html" class="extype" name="scroll.internal.support.QueryStrategies.WithProperty">WithProperty</a>, <a href="QueryStrategies$WithResult.html" class="extype" name="scroll.internal.support.QueryStrategies.WithResult">WithResult</a></div>
           </div></div>
         
 
