--- a/scroll/internal/support/QueryStrategies.html
+++ b/scroll/internal/support/QueryStrategies.html
@@ -95,19 +95,19 @@ object or the return value of one of its functions.
 
         <div id="types" class="types members">
               <h3>Type Members</h3>
-              <ol><li name="scroll.internal.support.QueryStrategies.*" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
-      <a id="*extendsQueryStrategies.this.RoleQueryStrategywithProductwithSerializable"></a>
-      <a id="*:*"></a>
+              <ol><li name="scroll.internal.support.QueryStrategies.MatchAny" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
+      <a id="MatchAnyextendsQueryStrategies.this.RoleQueryStrategywithProductwithSerializable"></a>
+      <a id="MatchAny:MatchAny"></a>
       <h4 class="signature">
       <span class="modifier_kind">
         <span class="modifier"></span>
         <span class="kind">case class</span>
       </span>
       <span class="symbol">
-        <a href="QueryStrategies$$times.html"><span title="gt4s: $times" class="name">*</span></a><span class="params">()</span><span class="result"> extends <a href="QueryStrategies$RoleQueryStrategy.html" class="extype" name="scroll.internal.support.QueryStrategies.RoleQueryStrategy">RoleQueryStrategy</a> with <span class="extype" name="scala.Product">Product</span> with <span class="extype" name="scala.Serializable">Serializable</span></span>
+        <a href="QueryStrategies$MatchAny.html"><span class="name">MatchAny</span></a><span class="params">()</span><span class="result"> extends <a href="QueryStrategies$RoleQueryStrategy.html" class="extype" name="scroll.internal.support.QueryStrategies.RoleQueryStrategy">RoleQueryStrategy</a> with <span class="extype" name="scala.Product">Product</span> with <span class="extype" name="scala.Serializable">Serializable</span></span>
       </span>
       </h4><span class="permalink">
-      <a href="../../../index.html#scroll.internal.support.QueryStrategies@*extendsQueryStrategies.this.RoleQueryStrategywithProductwithSerializable" title="Permalink" target="_top">
+      <a href="../../../index.html#scroll.internal.support.QueryStrategies@MatchAnyextendsQueryStrategies.this.RoleQueryStrategywithProductwithSerializable" title="Permalink" target="_top">
         <img src="../../../lib/permalink.png" alt="Permalink" />
       </a>
     </span>
