--- a/scroll/internal/support/Relationships$Relationship$$ConcreteValue.html
+++ b/scroll/internal/support/Relationships$Relationship$$ConcreteValue.html
@@ -45,7 +45,7 @@
         <span class="kind">case class</span>
       </span>
       <span class="symbol">
-        <span class="name">ConcreteValue</span><span class="params">(<span name="v">v: <span class="extype" name="scala.Int">Int</span></span>)</span><span class="result"> extends <a href="Relationships$Relationship$$ExpMultiplicity.html" class="extype" name="scroll.internal.support.Relationships.Relationship.ExpMultiplicity">ExpMultiplicity</a> with <span class="extype" name="scala.Product">Product</span> with <span class="extype" name="scala.Serializable">Serializable</span></span>
+        <span class="name">ConcreteValue</span><span class="params">(<span name="v">v: <span class="extype" name="scala.Ordered">Ordered</span>[<span class="extype" name="scala.Int">Int</span>]</span>)</span><span class="result"> extends <a href="Relationships$Relationship$$ExpMultiplicity.html" class="extype" name="scroll.internal.support.Relationships.Relationship.ExpMultiplicity">ExpMultiplicity</a> with <span class="extype" name="scala.Product">Product</span> with <span class="extype" name="scala.Serializable">Serializable</span></span>
       </span>
       </h4>
       
@@ -89,7 +89,7 @@
         <div id="constructors" class="members">
               <h3>Instance Constructors</h3>
               <ol><li name="scroll.internal.support.Relationships.Relationship.ConcreteValue#&lt;init&gt;" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
-      <a id="&lt;init&gt;(v:Int):scroll.internal.support.Relationships.Relationship.ConcreteValue"></a>
+      <a id="&lt;init&gt;(v:Ordered[Int]):scroll.internal.support.Relationships.Relationship.ConcreteValue"></a>
       <a id="&lt;init&gt;:ConcreteValue"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -97,10 +97,10 @@
         <span class="kind">new</span>
       </span>
       <span class="symbol">
-        <span class="name">ConcreteValue</span><span class="params">(<span name="v">v: <span class="extype" name="scala.Int">Int</span></span>)</span>
+        <span class="name">ConcreteValue</span><span class="params">(<span name="v">v: <span class="extype" name="scala.Ordered">Ordered</span>[<span class="extype" name="scala.Int">Int</span>]</span>)</span>
       </span>
       </h4><span class="permalink">
-      <a href="../../../index.html#scroll.internal.support.Relationships$Relationship$$ConcreteValue@&lt;init&gt;(v:Int):scroll.internal.support.Relationships.Relationship.ConcreteValue" title="Permalink" target="_top">
+      <a href="../../../index.html#scroll.internal.support.Relationships$Relationship$$ConcreteValue@&lt;init&gt;(v:Ordered[Int]):scroll.internal.support.Relationships.Relationship.ConcreteValue" title="Permalink" target="_top">
         <img src="../../../lib/permalink.png" alt="Permalink" />
       </a>
     </span>
@@ -365,18 +365,18 @@
     </span>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>AnyRef</dd></dl></div>
     </li><li name="scroll.internal.support.Relationships.Relationship.ConcreteValue#v" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
-      <a id="v:Int"></a>
-      <a id="v:Int"></a>
+      <a id="v:Ordered[Int]"></a>
+      <a id="v:Ordered[Int]"></a>
       <h4 class="signature">
       <span class="modifier_kind">
         <span class="modifier"></span>
         <span class="kind">val</span>
       </span>
       <span class="symbol">
-        <span class="name">v</span><span class="result">: <span class="extype" name="scala.Int">Int</span></span>
+        <span class="name">v</span><span class="result">: <span class="extype" name="scala.Ordered">Ordered</span>[<span class="extype" name="scala.Int">Int</span>]</span>
       </span>
       </h4><span class="permalink">
-      <a href="../../../index.html#scroll.internal.support.Relationships$Relationship$$ConcreteValue@v:Int" title="Permalink" target="_top">
+      <a href="../../../index.html#scroll.internal.support.Relationships$Relationship$$ConcreteValue@v:Ordered[Int]" title="Permalink" target="_top">
         <img src="../../../lib/permalink.png" alt="Permalink" />
       </a>
     </span>
