--- a/scroll/internal/util/ReflectiveHelper$.html
+++ b/scroll/internal/util/ReflectiveHelper$.html
@@ -183,8 +183,8 @@ useful functions for translating class and type names to Strings.
       </a>
     </span>
       <p class="shortcomment cmt">Translates a Class name to a String, i.e.</p><div class="fullcomment"><div class="comment cmt"><p>Translates a Class name to a String, i.e. removing anything before the last
-occurrence of &quot;<code>.</code>&quot;.
-</p></div><dl class="paramcmts block"><dt class="param">t</dt><dd class="cmt"><p>the Class name as String</p></dd><dt>returns</dt><dd class="cmt"><p>anything after the last occurrence of &quot;<code>.</code>&quot;</p></dd></dl></div>
+occurrence of &quot;<code>$</code>&quot;.
+</p></div><dl class="paramcmts block"><dt class="param">t</dt><dd class="cmt"><p>the Class name as String</p></dd><dt>returns</dt><dd class="cmt"><p>anything after the last occurrence of &quot;<code>$</code>&quot;</p></dd></dl></div>
     </li><li name="scala.AnyRef#clone" visbl="prt" data-isabs="false" fullComment="yes" group="Ungrouped">
       <a id="clone():Object"></a>
       <a id="clone():AnyRef"></a>
