--- a/scroll/internal/util/package.html
+++ b/scroll/internal/util/package.html
@@ -90,7 +90,24 @@ like logging (<a href="Log$.html" class="extype" name="scroll.internal.util.Log"
 
         <div id="types" class="types members">
               <h3>Type Members</h3>
-              <ol><li name="scroll.internal.util.ReflectiveHelper" visbl="pub" data-isabs="true" fullComment="no" group="Ungrouped">
+              <ol><li name="scroll.internal.util.Many" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
+      <a id="ManyextendsOrdered[Int]withProductwithSerializable"></a>
+      <a id="Many:Many"></a>
+      <h4 class="signature">
+      <span class="modifier_kind">
+        <span class="modifier"></span>
+        <span class="kind">case class</span>
+      </span>
+      <span class="symbol">
+        <a href="Many.html"><span class="name">Many</span></a><span class="params">()</span><span class="result"> extends <span class="extype" name="scala.Ordered">Ordered</span>[<span class="extype" name="scala.Int">Int</span>] with <span class="extype" name="scala.Product">Product</span> with <span class="extype" name="scala.Serializable">Serializable</span></span>
+      </span>
+      </h4><span class="permalink">
+      <a href="../../../index.html#scroll.internal.util.package@ManyextendsOrdered[Int]withProductwithSerializable" title="Permalink" target="_top">
+        <img src="../../../lib/permalink.png" alt="Permalink" />
+      </a>
+    </span>
+      
+    </li><li name="scroll.internal.util.ReflectiveHelper" visbl="pub" data-isabs="true" fullComment="no" group="Ungrouped">
       <a id="ReflectiveHelperextendsAnyRef"></a>
       <a id="ReflectiveHelper:ReflectiveHelper"></a>
       <h4 class="signature">
@@ -134,6 +151,23 @@ to access common tasks for working with reflections.</p>
       <p class="shortcomment cmt">Very simple logging utility.</p><div class="fullcomment"><div class="comment cmt"><p>Very simple logging utility. Simply set the DEBUG flag
 and show logging message to STDOUT via info().
 </p></div></div>
+    </li><li name="scroll.internal.util.Many" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
+      <a id="Many"></a>
+      <a id="Many:Many"></a>
+      <h4 class="signature">
+      <span class="modifier_kind">
+        <span class="modifier"></span>
+        <span class="kind">object</span>
+      </span>
+      <span class="symbol">
+        <a href="Many$.html"><span class="name">Many</span></a><span class="result"> extends <span class="extype" name="scala.Serializable">Serializable</span></span>
+      </span>
+      </h4><span class="permalink">
+      <a href="../../../index.html#scroll.internal.util.package@Many" title="Permalink" target="_top">
+        <img src="../../../lib/permalink.png" alt="Permalink" />
+      </a>
+    </span>
+      
     </li><li name="scroll.internal.util.QueueUtils" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
       <a id="QueueUtils"></a>
       <a id="QueueUtils:QueueUtils"></a>
