--- a/package.html
+++ b/package.html
@@ -70,24 +70,7 @@
 
         <div id="values" class="values members">
               <h3>Value Members</h3>
-              <ol><li name="_root_.annotations" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
-      <a id="annotations"></a>
-      <a id="annotations:annotations"></a>
-      <h4 class="signature">
-      <span class="modifier_kind">
-        <span class="modifier"></span>
-        <span class="kind">package</span>
-      </span>
-      <span class="symbol">
-        <a href="annotations/package.html"><span class="name">annotations</span></a>
-      </span>
-      </h4><span class="permalink">
-      <a href="index.html#package@annotations" title="Permalink" target="_top">
-        <img src="lib/permalink.png" alt="Permalink" />
-      </a>
-    </span>
-      
-    </li><li name="_root_.scroll" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
+              <ol><li name="_root_.scroll" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
       <a id="scroll"></a>
       <a id="scroll:scroll"></a>
       <h4 class="signature">
