--- a/scroll/internal/support/Relationships$Relationship$$Multiplicity.html
+++ b/scroll/internal/support/Relationships$Relationship$$Multiplicity.html
@@ -54,7 +54,7 @@
           <div class="superTypes hiddenContent"><span class="extype" name="scala.AnyRef">AnyRef</span>, <span class="extype" name="scala.Any">Any</span></div>
         </div><div class="toggleContainer block">
             <span class="toggle">Known Subclasses</span>
-            <div class="subClasses hiddenContent"><a href="Relationships$Relationship$$ConcreteValue.html" class="extype" name="scroll.internal.support.Relationships.Relationship.ConcreteValue">ConcreteValue</a>, <a href="Relationships$Relationship$$ExpMultiplicity.html" class="extype" name="scroll.internal.support.Relationships.Relationship.ExpMultiplicity">ExpMultiplicity</a>, <a href="Relationships$Relationship$$Many.html" class="extype" name="scroll.internal.support.Relationships.Relationship.Many">Many</a>, <a href="Relationships$Relationship$$RangeMultiplicity.html" class="extype" name="scroll.internal.support.Relationships.Relationship.RangeMultiplicity">RangeMultiplicity</a></div>
+            <div class="subClasses hiddenContent"><a href="Relationships$Relationship$$ConcreteValue.html" class="extype" name="scroll.internal.support.Relationships.Relationship.ConcreteValue">ConcreteValue</a>, <a href="Relationships$Relationship$$ExpMultiplicity.html" class="extype" name="scroll.internal.support.Relationships.Relationship.ExpMultiplicity">ExpMultiplicity</a>, <a href="Relationships$Relationship$$MMany.html" class="extype" name="scroll.internal.support.Relationships.Relationship.MMany">MMany</a>, <a href="Relationships$Relationship$$RangeMultiplicity.html" class="extype" name="scroll.internal.support.Relationships.Relationship.RangeMultiplicity">RangeMultiplicity</a></div>
           </div></div>
         
 
