--- a/scroll/internal/support/RoleRestrictions.html
+++ b/scroll/internal/support/RoleRestrictions.html
@@ -400,7 +400,7 @@
       </a>
     </span>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>AnyRef → Any</dd></dl></div>
-    </li><li name="scroll.internal.support.RoleRestrictions#validate" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
+    </li><li name="scroll.internal.support.RoleRestrictions#validate" visbl="prt" data-isabs="false" fullComment="yes" group="Ungrouped">
       <a id="validate(player:Any,role:reflect.runtime.universe.Type):Unit"></a>
       <a id="validate(Any,scala.reflect.api.JavaUniverse.Type):Unit"></a>
       <h4 class="signature">
@@ -418,7 +418,7 @@
     </span>
       <p class="shortcomment cmt">Checks all role restriction between the given player and a role type.</p><div class="fullcomment"><div class="comment cmt"><p>Checks all role restriction between the given player and a role type.
 Will throw a RuntimeException if a restriction is violated!
-</p></div><dl class="paramcmts block"><dt class="param">player</dt><dd class="cmt"><p>the player instance to check</p></dd><dt class="param">role</dt><dd class="cmt"><p>the role type to check</p></dd></dl></div>
+</p></div><dl class="paramcmts block"><dt class="param">player</dt><dd class="cmt"><p>the player instance to check</p></dd><dt class="param">role</dt><dd class="cmt"><p>the role type to check</p></dd></dl><dl class="attributes block"> <dt>Attributes</dt><dd>protected </dd></dl></div>
     </li><li name="scala.AnyRef#wait" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
       <a id="wait():Unit"></a>
       <a id="wait():Unit"></a>
