--- a/scroll/internal/support/package.html
+++ b/scroll/internal/support/package.html
@@ -160,6 +160,23 @@ object or the return value of one of its functions.</p>
       </a>
     </span>
       <p class="shortcomment cmt">Allows to add and check role constraints (Riehle constraints) to a compartment instance.</p>
+    </li><li name="scroll.internal.support.RoleGroups" visbl="pub" data-isabs="true" fullComment="no" group="Ungrouped">
+      <a id="RoleGroupsextendsAnyRef"></a>
+      <a id="RoleGroups:RoleGroups"></a>
+      <h4 class="signature">
+      <span class="modifier_kind">
+        <span class="modifier"></span>
+        <span class="kind">trait</span>
+      </span>
+      <span class="symbol">
+        <a href="RoleGroups.html"><span class="name">RoleGroups</span></a><span class="result"> extends <span class="extype" name="scala.AnyRef">AnyRef</span></span>
+      </span>
+      </h4><span class="permalink">
+      <a href="../../../index.html#scroll.internal.support.package@RoleGroupsextendsAnyRef" title="Permalink" target="_top">
+        <img src="../../../lib/permalink.png" alt="Permalink" />
+      </a>
+    </span>
+      
     </li><li name="scroll.internal.support.RoleRestrictions" visbl="pub" data-isabs="true" fullComment="no" group="Ungrouped">
       <a id="RoleRestrictionsextendsAnyRef"></a>
       <a id="RoleRestrictions:RoleRestrictions"></a>
